--- a/src/public/baixarvideo.html
+++ b/src/public/baixarvideo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Baixar Vídeo do YouTube</title>
+  <title>Baixar Vídeo do YouTube - Upload IASD</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -15,14 +15,35 @@
       <div class="flex items-center">
         <img src="/icons/logo.svg" alt="logo iasd" class="h-16" />
       </div>
-      <nav class="flex space-x-6">
+
+      <!-- Navbar -->
+      <nav class="hidden md:flex space-x-6">
         <a href="/" class="text-white text-lg font-semibold">Home</a>
         <a href="/baixarvideo.html" class="text-white text-lg font-semibold">Baixar do Youtube</a>
         <a href="/downloads-page" class="text-white text-lg font-semibold">Downloads</a>
         <a href="/comousar.html" class="text-white text-lg font-semibold">Como usar</a>
       </nav>
+
+      <!-- Hamburger Icon -->
+      <div class="md:hidden flex items-center">
+        <button id="hamburger" class="text-white">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden bg-blue-800/60 rounded-md p-4 hidden">
+      <a href="/" class="text-white text-lg font-semibold block py-2">Home</a>
+      <a href="/baixarvideo.html" class="text-white text-lg font-semibold block py-2">Baixar do Youtube</a>
+      <a href="/downloads-page" class="text-white text-lg font-semibold block py-2">Downloads</a>
+      <a href="/comousar.html" class="text-white text-lg font-semibold block py-2">Como usar</a>
     </div>
   </header>
+  <!-- conteudo principal  -->
+
   <div class="flex justify-center items-center pt-8">
     <div class="max-w-xl mx-auto bg-white p-6 rounded-lg shadow-md  w-[550px]">
 
@@ -52,6 +73,14 @@
     const button = document.querySelector("#submit-link");
     const downloadStatus = document.querySelector("#download-status");
     const downloadProgress = document.querySelector("#download-progress");
+    // Seleciona os elementos
+    const hamburger = document.getElementById('hamburger');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    // Alterna a visibilidade do menu móvel
+    hamburger.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
 
     button.addEventListener("click", async function () {
       const videoUrl = link.value.trim();
