--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,14 +14,35 @@
       <div class="flex items-center">
         <img src="/icons/logo.svg" alt="logo iasd" class="h-16" />
       </div>
-      <nav class="flex space-x-6">
+
+      <!-- Navbar -->
+      <nav class="hidden md:flex space-x-6">
         <a href="/" class="text-white text-lg font-semibold">Home</a>
         <a href="/baixarvideo.html" class="text-white text-lg font-semibold">Baixar do Youtube</a>
         <a href="/downloads-page" class="text-white text-lg font-semibold">Downloads</a>
         <a href="/comousar.html" class="text-white text-lg font-semibold">Como usar</a>
       </nav>
+
+      <!-- Hamburger Icon -->
+      <div class="md:hidden flex items-center">
+        <button id="hamburger" class="text-white">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden bg-blue-800/60 rounded-md p-4 hidden">
+      <a href="/" class="text-white text-lg font-semibold block py-2">Home</a>
+      <a href="/baixarvideo.html" class="text-white text-lg font-semibold block py-2">Baixar do Youtube</a>
+      <a href="/downloads-page" class="text-white text-lg font-semibold block py-2">Downloads</a>
+      <a href="/comousar.html" class="text-white text-lg font-semibold block py-2">Como usar</a>
     </div>
   </header>
+  <!-- conteudo principal  -->
+
   <div class="max-w-xl mx-auto bg-white p-6 rounded-lg shadow-md mt-6">
     <h1 class="text-2xl font-bold text-gray-800 mb-4">Enviar Arquivos</h1>
     <form action="/upload" method="post" enctype="multipart/form-data" class="flex flex-col gap-4">
@@ -77,14 +98,22 @@
         Enviar Link
       </button>
     </form>
-    <hr class="my-6" />
+    <!-- <hr class="my-6" /> -->
 
 
-    <br /><span class="text-lg">feito por
-      <a class="font-bold underline" href="https://gabrielkramer.netlify.app/">Gabriel Kramer</a>
-      💚</span><span> versão 1.5.0</span>
+
+
   </div>
+
   <script>
+    // Seleciona os elementos
+    const hamburger = document.getElementById('hamburger');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    // Alterna a visibilidade do menu móvel
+    hamburger.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
     document.getElementById("file").addEventListener("change", function () {
       var fileInput = document.getElementById("file");
       var uploadText = document.getElementById("upload-text");
@@ -93,6 +122,8 @@
       var newFileNameInput = document.getElementById("newFileName");
       var fileCount = document.getElementById("file-count");
       var uploadMessageText = document.getElementById("upload-message-text");
+
+
 
       if (fileInput.files.length > 0) {
         uploadText.classList.add("hidden");
